@@ -6,6 +6,8 @@ version 1.4.0:
 	* Fixed a bug where buddy icon cache files were left in the icon
 	  cache directory after they were no longer in use.
 	* Attempt to detect the file type of a buddy icon when saving.
+	* Fixed handling of the new Yahoo! profile page. (Joshua Honeycutt,
+	  Peter Lawler)
 
 version 1.3.1 (6/9/2005):
 	* The file transfer details section now also displays the full path to
